--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://jimjimliu.github.io/10-question-quiz-game"
+    "homepage": "http://jimjimliu.github.io/10-question-quiz-game",
   "name": "quiz-game-react",
   "version": "1.0.0",
   "main": "index.js",
